@@ -3,6 +3,7 @@
 
 Bug fixes
  - [web] date validator now handles non-latin characters
+ - [web] show the "reply all" button in more situations
 
 4.0.6 (2019-02-21)
 ------------------
